--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
   </head>
   <body>
     <h1>Welcome to my website!</h1>
+    <div class="menu">
+				<p><a href="index.html">Home</a></p>
+				<p><a href="cv.html">CV</a></p>
+				<p><a href="about.html">About</a></p>
+				<p><a href="http://validator.w3.org/">HTML validator</a></p>
+				<p><a href="https://jigsaw.w3.org/css-validator/">CSS validator</a></p>
+			</div>
   </body>
 </html>
