--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang ="en">
 	<head>
-        <meta charset=UTF-8 />
-		
-		<link rel="stylesheet" type="text/css" href="style.css" />
+    <meta charset=UTF-8 />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" href="style.css" />
 		
 		<title>Nia's website</title>
   </head>
   <body>
-    <h1>Welcome to my website!</h1>
-    <div class="menu">
-				<p><a href="index.html">Home</a></p>
-				<p><a href="cv.html">CV</a></p>
-				<p><a href="about.html">About</a></p>
-				<p><a href="http://validator.w3.org/">HTML validator</a></p>
-				<p><a href="https://jigsaw.w3.org/css-validator/">CSS validator</a></p>
-			</div>
+    <div class="grid-container">
+      <div class="header">
+        <h1>Nia Hawkins</h1>
+      </div>
+
+      <div class="menu">
+          <p><a class= active href="index.html">Home</a></p>
+          <p><a href="about.html">About me</a></p>
+          <p><a href="projects.html">Projects</a></p>
+          <p><a href="music.html">Music</a></p>
+        
+      </div>
+
+      <div class="mainBody">
+        <p>
+           Hello! My name is Nia and I am a Computer Science student at Aberystwyth University. <br/>
+            This website is still a work in progress, but I plan to add more to it soon!
+      </p>
+      </div>
+    </div>
   </body>
 </html>
