add content to projects page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-		<title>Nia's website</title>
+	
+<title>Nia's website</title>
   </head>
+
   <body>
     <div class="grid-container">
       <div class="header">
@@ -30,9 +32,26 @@
       <div class="mainBody">
         <p>
            Hello! My name is Nia and I am a Computer Science student at Aberystwyth University. <br/>
-            This website is still a work in progress, but I plan to add more to it soon!
+           I am currently on my Year in Industry, working on an IT Service Desk. <br/> <br/>
+
+           Outside of my studies, I am also a passionate violinist, violist and cornet player. 
+           I am an active member in many local bands and orchestras. <br/> <br/>
+
+           This website is a place for me to show my current projects - whether they are software related or musical! <br/>
+           It is still a work in progress, but I plan to add more to it soon!
       </p>
+      </div>
+
+      <div class="links">
+        <p>
+          My projects are available to view on <a href="https://github.com/nyhawk" >my GitHub profile</a>
+        </p>
+
       </div>
     </div>
   </body>
+  <footer>
+    <hr/>
+    <p>&copy Nia Hawkins 2025</p>
+  </footer>
 </html>
