--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
         </p>
 
         <h4>Instrument maintenance tracker</h4>
-        <p>over the nearly 10 years that I have been playing any instrument other than the piano (there are quite a few),
+        <p>In the nearly 10 years that I have been playing any instrument other than the piano (there are quite a few),
             I noticed that there are significant maintenance tasks that must be done to keep you instrument sounding its best.<br/>
             This especially applies to string players, as we may need to get bows rehaired every 6 months to a year, and replace strings when they become worn out <br/>
             I would like to create a program, or possibly a mobile app that would allow a user to:
@@ -54,7 +54,7 @@
                 <li>Record when a manintenance task is done, and other relevant details about the task</li>
                 <li>Schedule routine maintenance tasks, and set reminders for these</li>
                 <li>Log any damage to the instrument, such as scratches, cracks or dents, with the option to upload images</li>
-                <li>Perform analysis on the wear of the instrument, and use this to generate reports, such as which string brand is the most hardwearing, and predict when maintenance needs to be doen again</li>
+                <li>Perform analysis on the wear of the instrument, and use this to generate reports, such as which string brand is the most hardwearing, and predict when maintenance needs to be done again</li>
                 <li>Record useful contacts, such as local luthiers and music shops</li>
             </ul>
         <p>Initially, I plan to develop the program for string instruments only, but it has the scope to be extended to all instrument families over time.
