populate empty pages

--- a/sitetemplate.html
+++ b/sitetemplate.html
@@ -30,9 +30,8 @@
       </div>
 
       <div class="mainBody">
-        <h2>Music</h2>
         <p>
-           Content to be added here soon!
+           Put the main page content here!
       </p>
       </div>
 
