--- a/projects.html
+++ b/projects.html
@@ -22,9 +22,9 @@
       <div class="menu">
           
           
-          <p><a class= active href="index.html">Home</a></p>
+          <p><a href="index.html">Home</a></p>
           <p><a href="about.html">About me</a></p>
-          <p><a href="projects.html">Projects</a></p>
+          <p><a  class= active href="projects.html">Projects</a></p>
           <p><a href="music.html">Music</a></p>
 
       </div>
